# micro-cc

./: .gitignore  CMakeLists.txt  Nodes.hpp  codegen.h  main.cpp  parser.y  readme.md  scanner.l
test-sources/: 1.c  1.minic  2.minic  3.minic  4.minic
